# fmc-examples

./: del_subints.py
ansible/: hosts  subinterface.yml
python/: config.py  create_subints.py  del_subints.py  get_subints.py  pyproject.toml  requirements.txt  utils.py
